--- a/EMedCom_project/app/src/main/AndroidManifest.xml
+++ b/EMedCom_project/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeleteAccount"></activity>
+        <activity android:name=".ForgetPassword"></activity>
+        <activity android:name=".DeleteAccount" />
         <activity android:name=".OCRcolActivity" />
         <activity android:name=".PredictionActivity" />
         <activity android:name=".RegisterActivity" />
